samples/_failures_safe/1761642798_4808ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cd23628.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_5cd23628.c:144:5: error: expected identifier or ‘(’ at end of input
  144 |     char
      |     ^~~~
./samples/SAFE/__tmp_5cd23628.c:144:5: error: expected declaration or statement at end of input
